2.2.20
 * Add python2 location to RPMs (CASSANDRA-16822)
 * CQL shell should prefer newer TLS version by default (CASSANDRA-16695)
 * Fix Debian init start/stop (CASSANDRA-15770)
 * Remove ant targets list-jvm-dtests and ant list-jvm-upgrade-dtests (CASSANDRA-16519)
 * Fix centos packaging for arm64, >=4.0 rpm's now require python3 (CASSANDRA-16477)
 * Make TokenMetadata's ring version increments atomic (CASSANDRA-16286)
 * Remove OpenJDK log warning (CASSANDRA-15563)
 * Fix the histogram merge of the table metrics (CASSANDRA-16259)

2.2.19
 * Package tools/bin scripts as executable (CASSANDRA-16151)
 * Fix ExceptionInInitializerError when data_file_directories is not set (CASSANDRA-16008)
 * Fixed a NullPointerException when calling nodetool enablethrift (CASSANDRA-16127)

2.2.18
 * Fix CQL parsing of collections when the column type is reversed (CASSANDRA-15814)
Merged from 2.1:
 * Only allow strings to be passed to JMX authentication (CASSANDRA-16077)

2.2.17
 * Fix nomenclature of allow and deny lists (CASSANDRA-15862)
 * Remove generated files from source artifact (CASSANDRA-15849)
 * Remove duplicated tools binaries from tarballs (CASSANDRA-15768)
 * Duplicate results with DISTINCT queries in mixed mode (CASSANDRA-15501)
 * Disable JMX rebinding (CASSANDRA-15653)
 * Fix Commit log replays when static column clustering keys are collections (CASSANDRA-14365)
 * Fix Red Hat init script on newer systemd versions (CASSANDRA-15273)
 * Allow EXTRA_CLASSPATH to work on tar/source installations (CASSANDRA-15567)
Merged from 2.1:
 * Fix writing of snapshot manifest when the table has table-backed secondary indexes (CASSANDRA-10968)
 * Fix parse error in cqlsh COPY FROM and formatting for map of blobs (CASSANDRA-15679)


2.2.16
 * Fix SELECT JSON output for empty blobs (CASSANDRA-15435)
 * In-JVM DTest: Set correct internode message version for upgrade test (CASSANDRA-15371)
 * In-JVM DTest: Support NodeTool in dtest


2.2.15